--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_confirm_pix_password.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_confirm_pix_password.xml
@@ -5,18 +5,20 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appColorBranco"
     tools:context=".ConfirmPixPasswordActivity">
 
     <FrameLayout
         android:id="@+id/frameLayoutPix"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="#00BCD4"
+        android:background="@color/blue_light_neon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
+            android:id="@+id/linearLayoutHeader"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
@@ -32,25 +34,25 @@
                 android:scaleType="centerInside" />
 
             <TextView
-                android:id="@+id/txtTitulo"
+                android:id="@+id/txtTituloHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pix transferir"
-                android:textColor="#FFFFFF"
-                android:textSize="22sp"
+                android:text="@string/appTituloTransferirPix"
+                android:textColor="@color/appColorBranco"
+                android:textSize="20sp"
                 android:layout_marginStart="12dp"
                 android:textStyle="bold" />
         </LinearLayout>
     </FrameLayout>
 
     <TextView
-        android:id="@+id/titulo"
+        android:id="@+id/txtTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Senha de movimentação"
-        android:textColor="#000000"
-        android:textSize="32sp"
+        android:layout_marginTop="140dp"
+        android:text="@string/appTituloConfirmeSenha"
+        android:textColor="@color/appColorPreto"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -58,19 +60,61 @@
         app:layout_constraintTop_toBottomOf="@id/frameLayoutPix" />
 
     <TextView
-        android:id="@+id/txtChave"
+        android:id="@+id/txtSubtituloConfirmeSenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Confirme a transação com sua senha de movimentação"
-        android:textColor="#000000"
+        android:text="@string/appSubtituloConfirmeSenha"
+        android:textSize="16sp"
+        android:textColor="@color/appColorCinza"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tituloSenha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/appTituloSenha"
+        android:textColor="@color/appColorPreto"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtSenha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSubtituloConfirmeSenha"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/txtSenha"
+        android:layout_width="360dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="96dp"
+        android:background="@drawable/input_background"
+        android:hint="@string/appMascaraSenha"
+        android:inputType="textPassword"
+        android:padding="8dp"
+        android:textColor="@color/appColorPreto"
+        android:textColorHint="@color/appColorPreto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtSubtituloConfirmeSenha" />
+
+    <Button
+        android:id="@+id/btnConfirmarPagamento"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_margin="24dp"
+        android:layout_marginBottom="92dp"
+        android:backgroundTint="@color/blue_light_neon"
+        android:text="@string/appbtnConfirmar"
+        android:textColor="@color/appColorBranco"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titulo" />
-
-    <!-- Password -->
-
-
+        app:layout_constraintTop_toBottomOf="@id/txtSubtituloConfirmeSenha" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
