--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_tela_pix.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_tela_pix.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/appColorBranco"
-    tools:context=".PixHomeActivity">
+    tools:context=".PixTransferActivity">
 
     <!-- Topo com título e seta voltar -->
     <FrameLayout
