--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_confirm_pix_password.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_confirm_pix_password.xml
@@ -109,7 +109,7 @@
         android:layout_margin="24dp"
         android:layout_marginBottom="92dp"
         android:backgroundTint="@color/blue_light_neon"
-        android:text="@string/appbtnConfirmar"
+        android:text="@string/appBtnConfirmar"
         android:textColor="@color/appColorBranco"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
