--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/values/appValues.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/values/appValues.xml
@@ -44,7 +44,7 @@
     <string name="appMascaraPonto">0</string>
     <string name="appTituloGrafico">Acumulo de pontos em 2025</string>
 
-    <!-- String da Tela Pix -->
+    <!-- String da Tela PixTransferActivity -->
     <string name="appTituloTelaPix">Área Pix</string>
     <string name="appTextoTelaPix"> Envie e receba pagamentos em instantes.</string>
     <string name="appTituloEnviar">Enviar</string>
@@ -53,11 +53,9 @@
     <string name="appIcQRCode">QR Code</string>
 
     <!-- String da Tela ConfirmPixTransferActivity-->
-    <string name="appTituloTransferirPix">Transferir com Pix</string>
     <string name="appTituloConfirmeTransferirPix">Confirme sua transferência</string>
     <string name="appSubtituloConfirmeTransferirPix">Antes de avançar, verifique as informações abaixo:</string>
     <string name="appTituloValor">Valor</string>
-    <string name="appMascaraValor">R$ 00,00</string>
     <string name="appTituloDestinatario">Destinatário</string>
     <string name="appTituloDocumento">Documento</string>
     <string name="appTituloChave">Chave</string>
@@ -70,24 +68,22 @@
     <!-- String da Tela PixTransferReceiptActivity-->
     <string name="appTituloComprovante">Comprovante</string>
     <string name="appTxtStatus">Pix enviado com sucesso!</string>
-    <string name="appTxtBanco">Banco Fictício do Brasil\nAG. 1000 Conta 45678–0</string>
     <string name="appbtnCompartilhar">Compartilhar comprovante</string>
     <string name="appBtnMenu">Menu principal</string>
 
     <!-- String da Tela ConfirmPixPasswordActivity-->
     <string name="appTituloConfirmeSenha">Digita sua senha</string>
+    <string name="appBtnConfirmar">Confirmar</string>
+    <string name="appSubtituloConfirmeSenha">Confirme a transação com sua senha</string>
+
+    <!-- String da Tela PixTransferActivity-->
+    <string name="appTituloTransferirPix">Transferir com Pix</string>
+    <string name="appMascaraDestinatario">Nome</string>
+    <string name="appTxtSaldoDisponivel">Saldo disponível</string>
+    <string name="appMascaraValor">R$ 00,00</string>
     <string name="appTxtChave">Digite a chave pix</string>
     <string name="appMascaraChavePix">ex: email, telefone, CPF</string>
-    <string name="appBtnConfirmar">Confirmar</string>
-
-    <!-- String da Tela PixHomeActivity-->
-    <string name="appTxtSaldoDisponivel">Saldo disponível</string>
-    <string name="appSubtituloConfirmeSenha">Confirme a transação com sua senha de movimentação</string>
-    <string name="appbtnConfirmar">Confirmar</string>
-    <string name="appMascaraDestinatario"> Nome </string>
-
-
-
+    <string name="appTxtBanco">Banco Fictício do Brasil\nAG. 1000 Conta 45678–0</string>
 
     <!-- Cores do Projeto -->
     <color name="blue_neon">#0F91FE</color>
@@ -98,6 +94,6 @@
     <color name="appColorPreto">#000000</color>
     <color name="appColorCinza">#666666</color>
     <color name="appColorCinzaEscuro">#444444</color>
-    <color name="red">#FF0000</color>
+    <color name="appColorVermelho">#FF0000</color>
 
 </resources>
