Atualizando para appColorVermelho

--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
@@ -198,7 +198,7 @@
         android:id="@+id/btnDelete"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/red"
+        android:backgroundTint="@color/appColorVermelho"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appBtnExcluir"
         android:textColor="@color/appColorBranco"
