--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer.xml
@@ -100,54 +100,22 @@
 
     <EditText
         android:id="@+id/txtValor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="28dp"
+        android:background="@android:color/transparent"
+        android:gravity="center"
         android:hint="@string/appMascaraValor"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:padding="12dp"
         android:textColor="@color/appColorPreto"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:inputType="numberDecimal"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtChavePix" />
-
-
-    <LinearLayout
-        android:id="@+id/layoutDestinatario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/card_background"
-        android:elevation="4dp"
-        android:orientation="vertical"
-        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtValor">
-
-        <TextView
-            android:id="@+id/txtNomeDestinatario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/appMascaraDestinatario"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/txtBanco"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@string/appTxtBanco"
-            android:textSize="14sp" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@id/txtChavePix" />
 
     <Button
         android:id="@+id/btnConfirmar"
@@ -155,14 +123,15 @@
         android:layout_height="50dp"
         android:layout_margin="24dp"
         android:backgroundTint="@color/blue_light_neon"
+        android:onClick="confirmar"
         android:text="@string/appBtnConfirmar"
         android:textColor="@color/appColorBranco"
         android:textSize="18sp"
-        android:onClick="confirmar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.354"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.682" />
+        app:layout_constraintTop_toBottomOf="@+id/txtValor"
+        app:layout_constraintVertical_bias="0.211" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
