--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_confirm_pix_transfer.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_confirm_pix_transfer.xml
@@ -100,7 +100,7 @@
             android:text="@string/appMascaraValor"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:textColor="#000000"
+            android:textColor="@color/appColorPreto"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp" />
     </LinearLayout>
@@ -133,7 +133,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/appMascaraNome"
-            android:textColor="#000000"
+            android:textColor="@color/appColorPreto"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="8dp"
@@ -226,7 +226,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/appTituloQuando"
-                android:textColor="#444444"
+                android:textColor="@color/appColorCinzaEscuro"
                 android:textSize="14sp" />
 
             <TextView
@@ -234,7 +234,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/appTxtQuando"
-                android:textColor="#000000"
+                android:textColor="@color/appColorPreto"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginTop="4dp" />
