--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_main.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/imgLogo"
         android:layout_width="250dp"
         android:layout_height="210dp"
         android:src="@drawable/logo_neon_academy" />
