--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_home.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_home.xml
@@ -95,12 +95,14 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/imgLogoTransferir"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_transferir"
                 android:contentDescription="@string/appIcTransferir" />
 
             <TextView
+                android:id="@+id/tituloTransferir"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/appIcTransferir"
@@ -145,12 +147,14 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/imgLogoQrCode"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_qrcode"
                 android:contentDescription="@string/appIcQRCode" />
 
             <TextView
+                android:id="@+id/tituloQrCode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/appIcQRCode"
