Atualizando design activity_pix_transfer_receipt

--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer_receipt.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_pix_transfer_receipt.xml
@@ -94,6 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/appMascaraNome"
+            android:textColor="@color/appColorCinzaEscuro"
             android:textSize="18sp"
             android:textStyle="bold" />
 
